--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="#" class="menu-close-button small-close">Close</a>
 
     <ul class="level-1">
-       <li class="category men small-hide-level-2"><a href="#" class="active">Home</a></li>
+       <li class="category men small-hide-level-2"><a href="http://impulse1.github.io/FS2/" class="active">Home</a></li>
 		<li class="category women small-hide-level-2"><a href="#" class="">New Arrivals</a></li>
 		<li class="category kids"><a href="#" >Lookbook</a>
 		</li>
