--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h1><a href="#"><!--<img src="assets/img/logo.png" alt="Protest Boardwear">--></a></h1>
         <a href="#" class="menu-close-button small-close">Close</a>
 
-    <ul class="level-1">
+	<ul class="level-1" style="background:#2CCEB4;">
        <li class="category men small-hide-level-2"><a href="http://impulse1.github.io/FS2/" class="active">Home</a></li>
 		<li class="category women small-hide-level-2"><a href="#" class="">New Arrivals</a></li>
 		<li class="category kids"><a href="#" >Lookbook</a>
